--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  MyFirstJob:
+  job_1:
     runs-on: ubuntu-latest
-    
     steps:
-      - run: echo "👋 Hello World!"
+      - run: "echo Job: ${{ github.job }}"
+    
+  job_2:
+    runs-on: ubuntu-latest
+    needs: job_1
+    steps:
+      - run: "echo Job: ${{ github.job }}"
+  
+  job_3:
+    runs-on: ubuntu-latest
+    needs: job_1
+    steps:
+      - run: "echo Job: ${{ github.job }}"
 
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
+  job_4:
+    runs-on: ubuntu-latest
+    needs: [job_2, job_3]
+    steps:
+      - run: "echo Job: ${{ github.job }}"
